crates/pcbc/tests/snapshots/auto_deps__auto_deps_kicad_dynamic_path_pcb_toml.snap
---
source: crates/pcbc/tests/auto_deps.rs
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"

[dependencies]
"gitlab.com/kicad/libraries/kicad-footprints" = "9.0.3"

[dependencies.indirect]
"gitlab.com/kicad/libraries/kicad-packages3D@9" = "9.0.3"
"gitlab.com/kicad/libraries/kicad-symbols@9" = "9.0.3"
