crates/pcbc/tests/snapshots/auto_deps__auto_deps_kicad_footprints_pcb_toml.snap
---
source: crates/pcbc/tests/auto_deps.rs
assertion_line: 114
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"

[dependencies]
"gitlab.com/kicad/libraries/kicad-footprints" = "10.0.3"

[dependencies.indirect]
"gitlab.com/kicad/libraries/kicad-packages3D@10" = "10.0.3"
"gitlab.com/kicad/libraries/kicad-symbols@10" = "10.0.3"
