crates/pcbc/tests/snapshots/auto_deps__auto_deps_no_duplicate_pcb_toml.snap
---
source: crates/pcbc/tests/auto_deps.rs
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"
members = [
    "components/*",
    "reference/*",
    "modules/*",
    "boards/*",
    "graphics/*",
]
